# bazel-go-example

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  bazel-bazel-go-example  go.mod
cmd/hello/: BUILD.bazel  main.go
test/integration/redis/: BUILD.bazel  connection_test.go
