load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["connection_test.go"],
    tags = [
        "integration",
    ],
    deps = [
        "@com_github_gomodule_redigo//redis:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
